# Tutorium

./: .gitignore  README.md  package-lock.json
.circleci/: config.yml
backend/: .dockerignore  Dockerfile
backend/Tutorium/: .env  Dockerfile  pyproject.toml
backend/Tutorium/tutorium/: main.py
backend/Tutorium/tutorium/apis/: UserApi.py
backend/Tutorium/tutorium/database/: Database.py  Schemas.py
backend/Tutorium/tutorium/managers/: UserManager.py
backend/Tutorium/tutorium/models/: UserModel.py
backend/TutoriumApi/: .gitignore  AutoMapperProfile.cs  Program.cs  Startup.cs  TutoriumApi.csproj  appsettings.json
backend/TutoriumApi/Controllers/: AuthController.cs  CourseController.cs  MaterialController.cs  ReviewController.cs  WhiteboardSaveController.cs
backend/TutoriumApi/Data/: TutoriumContext.cs
backend/TutoriumApi/Exceptions/: BadRequestException.cs  CustomException.cs  NotFoundException.cs  UnauthorizedException.cs
backend/TutoriumApi/Filters/: ExceptionHandlingFilter.cs
backend/TutoriumApi/Migrations/: 20221211150625_InitialCreation.Designer.cs  20221211150625_InitialCreation.cs  20221214124514_InitialCreation.Designer.cs  20221217193911_Second.cs  (+9 more)
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/TutoriumWeb/: .eslintrc  .prettierrc  .stylelintrc  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/tutorium/: package.json
meeting/TutoriumMeeting/: .eslintrc  .prettierrc  .stylelintrc  cert.pem  key.pem  package-lock.json  package.json  server.js
(+136 files in other folders)
